# motioneye

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS  MANIFEST.in  Makefile  README.md  README.rst  ReadMe.md  conftest.py  debian_install  eventrelay.py  motioneye.py  pyproject.toml  requirements.txt  sendmail.py  settings.py  settings_default.py  setup.cfg  setup.py  webhook.py
.github/: dependabot.yaml
.github/workflows/: docker.yaml  docker.yml  lint_legacy_python.yml  lint_python.yml  make.yml  pip_audit.yml  pre-commit-autoupdate.yml  pre-commit.yml  pypi_daily.yml  pypi_daily_build.yml  pypi_release.yml  python_safety.yml  shellcheck.yml  test_python.yml  ubuntu_build.yml  update_locales.yml
conf/: .gitkeep
doc/: colors.txt  motion-options.txt  requirements.txt  todo.txt
docker/: Dockerfile  Dockerfile-riscv64  README.md  docker-compose.override.yml  docker-compose.yml
docs/: .gitignore  404.html  Gemfile  ReadMe.md  _config.yml  index.html
docs/_data/: languages.yml  translations.yml  translations.yml.0
docs/_includes/: alternate.html  footer.html  head.html  header.html  lang_nav.html  sidebar.html  trad_avert.html
docs/_layouts/: default.html  home.html  index.html  page.html  post.html
docs/_scripts/: komenci  trad_proj  traduki  traduki_po.awk  traduki_po.sh  traduko.sh
docs/ar/: index.md  pri.md
docs/bn/: index.md  pri.md
docs/de/: index.md  pri.md
docs/en/: index.md  pri.md
docs/eo/: index.md  pri.md
docs/es/: index.md  pri.md
docs/fr/: index.md  pri.md
docs/hi/: index.md  pri.md
docs/it/: index.md  pri.md
docs/ja/: index.md  pri.md
docs/ms/: index.md  pri.md
docs/pa/: index.md  pri.md
docs/pt/: index.md  pri.md
docs/ru/: index.md  pri.md
docs/zh/: index.md  pri.md
extra/: Dockerfile  Dockerfile.armv7-armhf  Dockerfile.local  README.md  docker-compose.override.yml  docker-compose.yml  docker-entrypoint.sh  entrypoint.sh  motion.conf.example  motioneye-docker.conf  motioneye.conf.example  motioneye.conf.sample  motioneye.init-debian  motioneye.rc-bsd  motioneye.systemd-unit  motioneye.systemd-unit-local  sources.list
l10n/: po2json  traduki_js.txt  traduki_po.sh  traduko.sh  v4l2.js
l10n_scripts/: traduki_js.txt  traduki_po.sh  traduki_python.txt
motioneye/: .gitignore  Makefile  __init__.py  cleanup.py  config.py  diskctl.py  encrypt.py  eventrelay.py  handlers.py  mediafiles.py  meyeDecrypt.py  meyeGenerateKeys.py  meyectl.py  mjpgclient.py  mmalctl.py  monitor.py  motionctl.py  motioneye_init.py  ordereddict.py  powerctl.py  prefs.py  relayevent.py  remote.py  sendmail.py  sendtelegram.py  server.py  settings.py  shell.py  smbctl.py  tasker.py  tasks.py  template.py  thumbnailer.py  traduki_js.txt  traduki_po.sh  traduki_python.txt  traduko.sh  tzctl.py  update.py  uploadservices.py  (+5 more)
motioneye.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
motioneye/controls/: diskctl.py  mmalctl.py  powerctl.py  smbctl.py  (+3 more)
raspicam/: README.md  motion  readme.txt  v4l2-ctl
src/: cleanup.py  config.py  diskctl.py  handlers.py  mediafiles.py  mjpgclient.py  motionctl.py  powerctl.py  remote.py  server.py  smbctl.py  template.py  thumbnailer.py  tzctl.py  update.py  utils.py  v4l2ctl.py  wifictl.py  wsswitch.py
temp/: .gitkeep
templates/: base-site.html  base.html  frame.html  home.html  macros.html  main.html
tests/: __init__.py  test_config.py  test_diskctl.py  test_mediafiles.py  test_remote.py  test_sendmail.py  test_uploadservices.py  test_uploadservices_dropbox.py
(+299 files in other folders)
