[metadata]
name = motioney.eo
version = 22.1.1
author = Calin Crisan, Jean Michault, ...
author_email = author@example.com
description = motioneye.eo, a multilingual web interface for motion.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jmichault/motioneye.eo
project_urls =
    Bug Tracker = https://github.com/jmichault/motioneye.eo/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = motioneye
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
